--- a/Pawpy/Pawpy.vcxproj.filters
+++ b/Pawpy/Pawpy.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="main.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="python_meta.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="plugin.def">
