Changed result to string type. Removed recursion-through-return-value feature for now.

--- a/Pawpy/Pawpy.vcxproj
+++ b/Pawpy/Pawpy.vcxproj
@@ -158,6 +158,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ModuleDefinitionFile>plugin.def</ModuleDefinitionFile>
     </Link>
+    <PostBuildEvent>
+      <Command>call "$(SolutionDir)Test\test.bat" "debug"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
